--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,6 @@ on:
     branches: "**"
     
 jobs:
-  enviroment: algo
   build:
     runs-on: ubuntu-latest
     strategy:
@@ -40,6 +39,7 @@ jobs:
           path: build/
 
   github-package:
+    environment: algo
     needs: build
     runs-on: ubuntu-latest
     steps:
@@ -57,8 +57,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: Build Docker images
         env:
-          REACT_APP_API_URL: ${{ secrets.REACT_APP_API_URL }}
-          REACT_APP_API_KEY: ${{ secrets.REACT_APP_API_KEY }}
+          REACT_APP_API_URL: ${{ secrets.TEST_ALGO }}
         run: |
           docker build . --rm -t ghcr.io/cechus/react-tailwind/dev-web:latest
       - name: Push Docker images to registry
